--- a/articulos/ansiedad.html
+++ b/articulos/ansiedad.html
@@ -58,10 +58,20 @@
     </main>
 
     <aside>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/UxUybYT_WZo" 
-            title="Video del Dr. Víctor Navarro sobre la ansiedad. En este video, el Dr. Navarro explora los síntomas, causas y tratamientos para la ansiedad, proporcionando una visión comprensible y accesible sobre el tema." 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p><a href="../indices/A.html" title="Índice de Enfermedades con letra A">Enfermedades <strong>A</strong></a></p>
+	<h3> Ciclo de la ansiedad </h3>
+    <img src="../imagenes/Ciclo-de-la-ansiedad.jpg" alt="Ciclo de ansiedad" usemap="#MapaAnsiedad" width="500">
+	<map name="MapaAnsiedad">
+					<area shape="rect" coords="50,50,180,130" href="https://es.wikipedia.org/wiki/Confianza" alt="Pérdida de confianza">
+					<area shape="rect" coords="300,70,400,110" href="https://es.wikipedia.org/wiki/Miedo" alt="Miedo">
+					<area shape="circle" coords="400,210,38" href="https://es.wikipedia.org/wiki/Evitaci%C3%B3n" alt="Evitación">
+					<area shape="circle" coords="220,190,50" href="https://es.wikipedia.org/wiki/Ansiedad" alt="ansiedad">
+					<area shape="poly" coords="180,250,10,250,30,180,180,180" href="https://es.wikipedia.org/wiki/Preocupaci%C3%B3n" alt="Preocupación">
+					<area shape="poly" coords="350,320,150,320,150,270,350,270" href="https://es.wikipedia.org/wiki/Estr%C3%A9s" alt="Alivio a corto plazo">
+	</map>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/UxUybYT_WZo" 
+		title="Video del Dr. Víctor Navarro sobre la ansiedad. En este video, el Dr. Navarro explora los síntomas, causas y tratamientos para la ansiedad, proporcionando una visión comprensible y accesible sobre el tema." 
+		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<p><a href="../indices/A.html" title="Índice de Enfermedades con letra A">Enfermedades <strong>A</strong></a></p>
     </aside>
     
     <footer class="piePagina">
