--- a/articulos/botulismo.html
+++ b/articulos/botulismo.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>ENCICLOPEDIAJAVIALVARO-BOTULISMO</title>
+		<style>
+        table, tr, td, th {
+            border: 1px solid #653299;
+        }
+        th {
+            font-weight: normal;
+            background-color: black;
+            color: white;
+        }
+    </style>
     </head>
     <body>
         <header>
@@ -55,6 +65,33 @@
 			<li>Antibióticos: Solo en casos de botulismo de heridas, se utilizan antibióticos para tratar la infección, aunque no tienen efecto sobre la toxina.</li>
 		</ol>
 		</section>
+		
+		<table>
+			<caption>Tipos de botulismo y sus características</caption>
+			<tr>
+			   
+				<th scope="row">Tipo de Botulismo</th>
+				<th scope="col">Alimentario</th>
+				<th scope="col">Infantil</th>
+				<th scope="col">Por heridas</th>
+				<th scope="col">Iatrogénico</th>
+			</tr>
+			<tr>
+				<th scope="row">Síntomas</th>
+				<td>Debilidad muscular, visión borrosa</td>
+				<td>Llanto débil, dificultad para succionar</td>
+				<td>Parálisis progresiva</td>
+				<td>Debilidad muscular generalizada</td>
+			</tr>
+			<tr>
+				<th scope="row">Tratamiento</th>
+				<td>Antitoxina, ventilación asistida</td>
+				<td>Inmunoglobulina, soporte respiratorio</td>
+				<td>Limpieza quirúrgica, antibióticos</td>
+				<td>Interrupción del tratamiento, antitoxina</td>
+			</tr>
+		</table>
+		
 		</main>
 <aside>
 
