--- a/index.html
+++ b/index.html
@@ -18,37 +18,37 @@ Bienvenido a nuestra enciclopedia médica en línea, tu fuente confiable para in
             <a href="indices/buscador.html">Buscador</a> |
 			<a href="indices/contacto.html">Contacto</a> 
 
-<h2> INDICE </h2>
-<ul>
-<li><a href="indices/A.html" title="A">A</a></li>
-<li><a href="indices/B.html" title="B">B</a></li>
-<li><a href="indices/error.html" title="C">C</a></li>
-<li><a href="indices/error.html" title="D">D</a></li>
-<li><a href="indices/error.html" title="E">E</a></li>
-<li><a href="indices/error.html" title="F">F</a></li>
-<li><a href="indices/error.html" title="G">G</a></li>
-<li><a href="indices/error.html" title="H">H</a></li>
-<li><a href="indices/error.html" title="I">I</a></li>
-<li><a href="indices/error.html" title="J">J</a></li>
-<li><a href="indices/error.html" title="K">K</a></li>
-<li><a href="indices/error.html" title="L">L</a></li>
-<li><a href="indices/error.html" title="M">M</a></li>
-<li><a href="indices/error.html" title="N">N</a></li>
-<li><a href="indices/error.html" title="O">O</a></li>
-<li><a href="indices/error.html" title="P">P</a></li>
-<li><a href="indices/error.html" title="Q">Q</a></li>
-<li><a href="indices/error.html" title="R">R</a></li>
-<li><a href="indices/error.html" title="S">S</a></li>
-<li><a href="indices/error.html" title="T">T</a></li>
-<li><a href="indices/error.html" title="U">U</a></li>
-<li><a href="indices/error.html" title="V">V</a></li>
-<li><a href="indices/error.html" title="W">W</a></li>
-<li><a href="indices/error.html" title="X">X</a></li>
-<li><a href="indices/error.html" title="Y">Y</a></li>
-<li><a href="indices/error.html" title="Z">Z</a></li>
+		<h2> INDICE </h2>
+		<ul>
+		<li><a href="indices/A.html" title="A">A</a></li>
+		<li><a href="indices/B.html" title="B">B</a></li>
+		<li><a href="indices/error.html" title="C">C</a></li>
+		<li><a href="indices/error.html" title="D">D</a></li>
+		<li><a href="indices/error.html" title="E">E</a></li>
+		<li><a href="indices/error.html" title="F">F</a></li>
+		<li><a href="indices/error.html" title="G">G</a></li>
+		<li><a href="indices/error.html" title="H">H</a></li>
+		<li><a href="indices/error.html" title="I">I</a></li>
+		<li><a href="indices/error.html" title="J">J</a></li>
+		<li><a href="indices/error.html" title="K">K</a></li>
+		<li><a href="indices/error.html" title="L">L</a></li>
+		<li><a href="indices/error.html" title="M">M</a></li>
+		<li><a href="indices/error.html" title="N">N</a></li>
+		<li><a href="indices/error.html" title="O">O</a></li>
+		<li><a href="indices/error.html" title="P">P</a></li>
+		<li><a href="indices/error.html" title="Q">Q</a></li>
+		<li><a href="indices/error.html" title="R">R</a></li>
+		<li><a href="indices/error.html" title="S">S</a></li>
+		<li><a href="indices/error.html" title="T">T</a></li>
+		<li><a href="indices/error.html" title="U">U</a></li>
+		<li><a href="indices/error.html" title="V">V</a></li>
+		<li><a href="indices/error.html" title="W">W</a></li>
+		<li><a href="indices/error.html" title="X">X</a></li>
+		<li><a href="indices/error.html" title="Y">Y</a></li>
+		<li><a href="indices/error.html" title="Z">Z</a></li>
 
-</ul> 
-</nav>
+		</ul> 
+	</nav>
 </main>
 
 <section>
@@ -61,7 +61,11 @@ La ansiedad es un conjunto de procesos psicológicos y fisiológicos que aparece
 </p>
 </section>
 <aside>
+<nav>
 <a href="articulos/ansiedad.html" title="artículo sobre la ansiedad">Articulo completo </a>
+<h4> ¿Te gustaría publicar tu artículo?</h4>
+<a href="indices/formulario.html" title="Añade tu artículo">Añade tu artículo</a>
+</nav>
 </aside>
 
 <footer class = "piePagina">	
