--- a/indices/buscador.html
+++ b/indices/buscador.html
@@ -8,8 +8,9 @@
     <main>
 	<img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
         <h2>Buscar Artículos</h2>
-        <form action="../articulos/respuesta_buscador.html" method="POST">
-		
+        <form action="../articulos/respuesta_buscador.html" method="GET">
+			
+			<p>Describe brevemente la alergia y cómo afecta al cuerpo.</p>
             <p>
 			<label for="descripcion">Descripción:</label>
             <input type="text" id="descripcion" name="descripcion">
@@ -20,6 +21,7 @@
             <input type="text" id="causas" name="causas">
 			</p>
 			
+			<p>Indica los signos y malestares comunes asociados<p>
 			<p>
             <label for="sintomas">Síntomas:</label>
             <input type="text" id="sintomas" name="sintomas">
@@ -35,8 +37,10 @@
             <input type="text" id="tratamiento" name="tratamiento">
 			</p>
 			
-			<p>
-            <label for="expectativas">Expectativas:</label>
+			
+			<p>Proporciona una visión sobre el pronóstico a largo plazo y posibles mejoras con el tratamiento.</p>
+            <p>
+			<label for="expectativas">Expectativas:</label>
             <input type="text" id="expectativas" name="expectativas">
 			</p>
 			
