--- a/indices/contacto.html
+++ b/indices/contacto.html
@@ -9,14 +9,20 @@
     <main>
 	<img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
         <h2>Contáctanos</h2>
-        <form action="../articulos/respuesta_contacto.html" method="POST">
+        <form action="../articulos/respuesta_contacto.html" method="GET">
 			<p>
-            <label for="asunto">Asunto:</label>
+			Motivo del contacto
+			</p>
+			<p>
+            <label for="asunto">Asunto*:</label>
             <input type="text" id="asunto" name="asunto" required>
 			</p>
 			<p>
-            <label for="comentario">Comentario o Pregunta:</label><br>
+            <label for="comentario">Comentario o Pregunta*:</label><br>
             <textarea id="comentario" name="comentario" rows="5" cols="30" placeholder="¿Cómo puedo realizar una buúsqueda?" required></textarea>
+			</p>
+			<p>
+			Selecciona la profesión
 			</p>
 			<p>
             <label for="yo_soy">Yo soy:</label>
@@ -34,7 +40,9 @@
             <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
             <input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
 			</p>
-
+			<p>
+			Marca la casilla
+			<p>
             <fieldset>
                 <legend>Sexo:</legend>
                 <p><input type="radio" id="hombre" name="sexo" value="hombre" checked>
@@ -48,7 +56,7 @@
             </fieldset>
 			
 			<p>
-            <label for="email">Correo Electrónico:</label>
+            <label for="email">Correo Electrónico*:</label>
             <input type="email" id="email" name="email" placeholder="jlz4@alu.ua.es" required>
 			</p>
 			<p>
