--- a/articulos/respuesta_buscador.html
+++ b/articulos/respuesta_buscador.html
@@ -11,8 +11,15 @@
     </header>
 
     <main>
-        <p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
-        <p><a href="../indices/buscador.html" title="Buscador">Volver</a></p>
+        
+		<nav>
+            <p>
+                <a href="../index.html" title="indice">Indice</a> >
+                <a href="../indices/buscador.html" title="buscador">Buscador</a> >
+                <a>Respuesta Buscador</a>
+            </p>
+        </nav>
+		<p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
     </main>
 
        <footer>
