--- a/articulos/respuesta_contacto.html
+++ b/articulos/respuesta_contacto.html
@@ -11,8 +11,14 @@
     </header>
 
     <main>
-        <p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta.</p>
-        <p><a href="../indices/contacto.html" title="Formulario de contacto">Volver</a></p>
+        <nav>
+            <p>
+                <a href="../index.html" title="indice">Indice</a> >
+                <a href="../indices/contacto.html" title="contacto">Contacto</a> >
+                <a>Respuesta Contacto</a>
+            </p>
+        </nav>
+		<p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta.</p>
     </main>
 
     <footer>
