--- a/articulos/respuesta_formulario.html
+++ b/articulos/respuesta_formulario.html
@@ -11,8 +11,14 @@
     </header>
 
     <main>
+		<nav>
+			<p>
+				<a href="../index.html" title="indice">Indice</a> >
+				<a href="../indices/formulario.html" title="formulario">Formulario</a> >
+				<a>Respuesta Formulario</a>
+			</p>
+		</nav>
         <p>Hemos recibido la petición de guardar el articulo</p>
-        <p><a href="../indices/formulario.html" title="Formulario">Volver</a></p>
     </main>
 
        <footer>
