--- a/indices/A.html
+++ b/indices/A.html
@@ -2,20 +2,26 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>ENCICLOPEDIAJAVIALVARO - Patologías Letra A</title>
+    <title>ENCICLOPEDIA JAVIALVARO - Patologías Letra A</title>
 </head>
 <body>
     <header>
-        <a href="../index.html" title="ENCICLOPEDIAMEDICA">
-            <img src="../imagenes/logo.jpg" alt="logo"/>
+        <a href="../index.html" title="Indice">
+            <img src="../imagenes/logo.jpg" alt=""/>
             <h1>ENCICLOPEDIAMEDICA</h1>
         </a>
-        <h2>PATOLOGÍAS CON LA LETRA <em>'A'</em>:</h2>
     </header>
 
     <main>
+        <nav>
+            <p>
+                <a href="../index.html" title="Indice">Indice</a> >
+                <a>Patologías con letra 'A'</a>
+            </p>
+        </nav>
+		<h2>PATOLOGÍAS CON LA LETRA <em>'A'</em>:</h2>
         <article>
-            <h2>Lista de enfermedades</h2> <!-- Añadí este encabezado faltante -->
+            <h2>Lista de enfermedades</h2>
             <nav>
                 <ul>
                     <li>Enfermedades:
@@ -29,8 +35,6 @@
         </article>
     </main>
 
-    <p><a href="../index.html" title="Filtrar enfermedades por inicial">Filtrar enfermedades por <strong>inicial</strong></a></p>
-
     <footer class="piePagina">
         <dl>
             <dt>Autores:</dt>
@@ -38,7 +42,7 @@
             <dd>Alvaro Safont</dd>
         </dl>
         <p><em>Ingeniería Biomédica</em></p>
-		<p><strong>COPYRIGHT 2024</strong></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
