--- a/indices/B.html
+++ b/indices/B.html
@@ -7,15 +7,22 @@
 <body>
     <header>
         <a href="../index.html" title="ENCICLOPEDIAMEDICA">
-            <img src="../imagenes/logo.jpg" alt="logo"/>
+            <img src="../imagenes/logo.jpg" alt=""/>
             <h1>ENCICLOPEDIAMEDICA</h1>
         </a>
-        <h2>PATOLOGÍAS CON LA LETRA <em>'B'</em>:</h2>
+        
     </header>
 
     <main>
+		<nav>
+            <p>
+                <a href="../index.html" title="Indice">Indice</a> >
+                <a title="PATOLOGÍAS CON LA LETRA 'B'">PATOLOGÍAS CON LA LETRA 'B'</a> > 
+            </p>
+        </nav>
+        <h2>PATOLOGÍAS CON LA LETRA <em>'B'</em>:</h2>
         <article>
-            <h2>Lista de enfermedades</h2> <!-- Añadí este encabezado faltante -->
+            <h2>Lista de enfermedades</h2> <!-- Encabezado que describe el contenido del artículo -->
             <nav>
                 <ul>
                     <li>Enfermedades:
@@ -29,8 +36,6 @@
         </article>
     </main>
 
-    <p><a href="../index.html" title="Filtrar enfermedades por inicial">Filtrar enfermedades por <strong>inicial</strong></a></p>
-
     <footer class="piePagina">
         <dl>
             <dt>Autores:</dt>
@@ -38,7 +43,8 @@
             <dd>Alvaro Safont</dd>
         </dl>
         <p><em>Ingeniería Biomédica</em></p>
-		<p><strong>COPYRIGHT 2024</strong></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
+
