--- a/indices/buscador.html
+++ b/indices/buscador.html
@@ -6,7 +6,14 @@
 </head>
 <body>
     <main>
+		
 	<img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
+        <nav>
+            <p>
+                <a href="../index.html" title="Indice">Indice</a> >
+                <a title="Buscador">Buscador</a> >
+            </p>
+        </nav>
         <h2>Buscar Artículos</h2>
         <form action="../articulos/respuesta_buscador.html" method="GET">
 			
@@ -46,7 +53,7 @@
 			
             <input type="submit" value="Buscar">
         </form>
-        <p><a href="../index.html" title="Indice">Volver al indice</a></p>
+
     </main>
 
     <footer>
