--- a/articulos/alergias.html
+++ b/articulos/alergias.html
@@ -3,23 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>ENCICLOPEDIA JAVIALVARO - ALERGIAS</title>
-    <style>
-        table, tr, td, th {
-            border: 1px solid #653299;
-            border-collapse: collapse;
-        }
-        th {
-            font-weight: normal;
-            background-color: black;
-            color: white;
-            padding: 8px;
-        }
-        td {
-            padding: 8px;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
+	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <a href="../index.html" title="pantalla inicio">
             <img src="../imagenes/logo.jpg" alt="logo">
@@ -35,10 +22,9 @@
         </p>
     </nav>
 
-    <main>
+    <main id="contenido-principal">
         <h2>Alergias</h2>
 
-        <!-- Tabla de Contenidos -->
         <section>
             <h3>Tabla de Contenidos</h3>
             <ul>
