--- a/articulos/bartolinitis.html
+++ b/articulos/bartolinitis.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>ENCICLOPEDIAJAVIALVARO - BARTOLINITIS</title>
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
+	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <a href="../index.html" title="Pantalla inicio">
             <img src="../imagenes/logo.jpg" alt="Logo de ENCICLOPEDIAMEDICA" >
@@ -12,7 +14,7 @@
         </a>
     </header>
     
-    <main>
+ <main id="contenido-principal">
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
