--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>ENCICLOPEDIA JAVIALVARO - ENCICLOPEDIAMEDICA</title>
+	<link rel="stylesheet" href="css/estilos2.css">
 </head>
 <body>
+	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <img src="imagenes/logo.jpg" style="width: 100%; max-width: 300px; height: auto;" alt="">
         <h1>ENCICLOPEDIAMEDICA</h1>
     </header>
 
-    <main>
+    <main id="contenido-principal">
+		
 		<nav>
 			<p>
 				<a>Indice</a>
@@ -77,6 +80,8 @@
             <a href="articulos/ansiedad.html" title="Artículo sobre la ansiedad">Artículo completo</a>
             <h4>¿Te gustaría publicar tu artículo?</h4>
             <a href="indices/formulario.html" title="Añade tu artículo">Añade tu artículo</a>
+			<p> Mapa <p>
+            <a href="indices/mapa.html" title="Mapa">Mapa</a> 
 			<p> Información adicional <p>
             <a href="indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a> 
             
