--- a/indices/accesibilidad.html
+++ b/indices/accesibilidad.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Declaración de Accesibilidad - EnciclopediaJaviAlvaro</title>
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
+	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <figure>
             <img src="../imagenes/logo.jpg" style="width: 100%; max-width: 300px; height: auto;" alt="">
@@ -19,7 +21,7 @@
         </p>
     </nav>
     
-    <main>
+    <main id="contenido-principal">
         <p>
             Esta es una declaración de accesibilidad de <span class="basic-information organization-name">EnciclopediaJaviAlvaro</span>.
         </p>
