--- a/indices/formulario.html
+++ b/indices/formulario.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Añadir Nueva Versión de Artículo - Enciclopedia</title>
+     <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
-    <main>
+	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
+   <main id="contenido-principal">
         <img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
 		
         <nav>
