--- a/articulos/respuesta_buscador.html
+++ b/articulos/respuesta_buscador.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Respuesta de Búsqueda - Enciclopedia</title>
+     <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
+	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
 		<img src="../imagenes/logo.jpg" alt="Logo">
         <h1>Respuesta de Búsqueda</h1>
     </header>
 
-    <main>
-        
+  <main id="contenido-principal">
 		<nav>
             <p>
                 <a href="../index.html" title="indice">Indice</a> >
