--- a/indices/B.html
+++ b/indices/B.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>ENCICLOPEDIAJAVIALVARO - Patologías Letra B</title>
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
+	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <a href="../index.html" title="ENCICLOPEDIAMEDICA">
             <img src="../imagenes/logo.jpg" alt=""/>
@@ -13,7 +15,7 @@
         
     </header>
 
-    <main>
+<main id="contenido-principal">
 		<nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
