--- a/indices/contacto.html
+++ b/indices/contacto.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto - Enciclopedia</title>
+     <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
-	 <main>
+		<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
+	    <main id="contenido-principal">
     
-        <img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
+			<img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
        
         <nav>
             <p>
