--- a/indices/buscador.html
+++ b/indices/buscador.html
@@ -37,7 +37,7 @@
 			</p>
 			
 			<p>
-            <label for="pruebas">Pruebas y Exámenes:</label>
+            <label for="pruebas">Pruebas:</label>
             <input type="text" id="pruebas" name="pruebas">
 			</p>
 			
@@ -53,7 +53,7 @@
             <input type="text" id="expectativas" name="expectativas">
 			</p>
 			
-            <input type="submit" value="Buscar">
+            <input type="submit" value="Buscar" class="centrado">
         </form>
 
     </main>
