--- a/indices/formulario.html
+++ b/indices/formulario.html
@@ -20,7 +20,7 @@
          <p>Los campos que llevan '*' son obligatorios</p>
         <form action="../articulos/respuesta_formulario.html" method="GET">
             <p>
-                <label for="descripcion">Descripción de la Enfermedad*:</label>
+                <label for="descripcion"> Enfermedad*:</label>
                 <textarea id="descripcion" name="descripcion" rows="1" cols='30' placeholder="Descripción de la enfermedad..." required></textarea>
             </p>
 
@@ -40,17 +40,17 @@
             </p>
 
             <p>
-                <label for="causas">Principales Causas*:</label>
+                <label for="causas">Causas*:</label>
                 <textarea id="causas" name="causas" rows="1" cols='38' placeholder="Causas principales de la enfermedad..." required></textarea>
             </p>
 
             <p>
-                <label for="email">Tu Correo Electrónico*:</label>
+                <label for="email">Correo*:</label>
                 <input type="email" id="email" name="email" placeholder="ejemplo@correo.com" required>
             </p>
 
             <p>
-                <label for="date">Fecha de Publicación*:</label>
+                <label for="date">Fecha *:</label>
                 <input type="date" id="date" name="date" required>
             </p>
             <p>
@@ -58,16 +58,16 @@
             </p>
 
             <p>
-                <label style='color:red' for="version">Número de Versión:</label>
+                <label style='color:red' for="version">Versión:</label>
                 <input type="number" id="version" name="version" min="1" max="100">
             </p>
 
             <p>
-                <label for="range">Importancia de la Enfermedad (1-10):</label>
+                <label for="range">Importancia:</label>
                 <input type="range" id="range" name="importance" min="1" max="10" step="1">
             </p>
 
-            <input type="submit" value="Enviar">
+            <input type="submit" value="Enviar" class="centrado">
         </form>
 
     </main>
