--- a/articulos/respuesta_contacto.html
+++ b/articulos/respuesta_contacto.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Respuesta de Contacto - Enciclopedia</title>
     <link rel="stylesheet" href="../css/estilos2.css">
 </head>
