--- a/indices/error.html
+++ b/indices/error.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> ENCICLOPEDIAMEDICA - Error 404 </title>  
     <link rel="stylesheet" href="../css/estilos2.css">  
     </head>
