--- a/indices/buscador.html
+++ b/indices/buscador.html
@@ -2,14 +2,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador - Enciclopedia</title>
-    <link rel="stylesheet" href="../css/estilos2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="../css/estilos2.css" type="text/css">
 </head>
 <body>
-	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
+    <a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <main id="contenido-principal">
 		
-	<img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
+        <img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
@@ -19,59 +21,52 @@
         <h2>Buscar Artículos</h2>
         <form action="../articulos/respuesta_buscador.html" method="GET">
 			
-			<p>Describe brevemente la alergia y cómo afecta al cuerpo.</p>
+            <p><i class="fas fa-info-circle"></i> Describe brevemente la alergia y cómo afecta al cuerpo.</p>
             <p>
-			<label for="descripcion">Descripción:</label>
-            <input type="text" id="descripcion" name="descripcion">
-			</p>
+                <label for="descripcion"><i class="fas fa-file-alt"></i> Descripción:</label>
+                <input type="text" id="descripcion" name="descripcion">
+            </p>
 			
-			<p>
-            <label for="causas">Causas:</label>
-            <input type="text" id="causas" name="causas">
-			</p>
-			
-			<p>Indica los signos y malestares comunes asociados<p>
-			<p>
-            <label for="sintomas">Síntomas:</label>
-            <input type="text" id="sintomas" name="sintomas">
-			</p>
-			
-			<p>
-            <label for="pruebas">Pruebas:</label>
-            <input type="text" id="pruebas" name="pruebas">
-			</p>
-			
-			<p>
-            <label for="tratamiento">Tratamiento:</label>
-            <input type="text" id="tratamiento" name="tratamiento">
-			</p>
-			
-			
-			<p>Proporciona una visión sobre el pronóstico a largo plazo y posibles mejoras con el tratamiento.</p>
             <p>
-			<label for="expectativas">Expectativas:</label>
-            <input type="text" id="expectativas" name="expectativas">
-			</p>
+                <label for="causas"><i class="fas fa-seedling"></i> Causas:</label>
+                <input type="text" id="causas" name="causas">
+            </p>
+			
+   
+            <p>
+                <label for="sintomas"><i class="fas fa-stethoscope"></i> Síntomas:</label>
+                <input type="text" id="sintomas" name="sintomas">
+            </p>
+			
+            <p>
+                <label for="pruebas"><i class="fas fa-vials"></i> Pruebas:</label>
+                <input type="text" id="pruebas" name="pruebas">
+            </p>
+			
+            <p>
+                <label for="tratamiento"><i class="fas fa-prescription-bottle-alt"></i> Tratamiento:</label>
+                <input type="text" id="tratamiento" name="tratamiento">
+            </p>
+			
+            
 			
             <input type="submit" value="Buscar" class="centrado">
         </form>
-
     </main>
 
     <footer>
-	 
-	   <dl>
-	   <dt>Autores:</dt>
-	   <dd>Javier Lopez</dd>
-	   <dd>Alvaro Safont</dd>
-		</dl>
-		<p>
-		<em>Ingenieria Biomedica</em>
-		</p>
-		<p>
-		<strong>COPYRIGHT 2024</strong>
-		</p>	
-
+        <dl>
+            <dt>Autores:</dt>
+            <dd>Javier Lopez</dd>
+            <dd>Alvaro Safont</dd>
+        </dl>
+        <p>
+            <em>Ingeniería Biomédica</em>
+        </p>
+        <p>
+            <strong>COPYRIGHT 2024</strong>
+        </p>	
     </footer>
 </body>
 </html>
+
