--- a/articulos/alergias.html
+++ b/articulos/alergias.html
@@ -14,7 +14,8 @@
             <h1>ENCICLOPEDIA MEDICA</h1>
         </a>
     </header>
-
+	
+	<main id="contenido-principal">
     <nav>
         <p>
             <a href="../index.html" title="Indice">Indice</a> >
@@ -23,7 +24,6 @@
         </p>
     </nav>
 
-    <main id="contenido-principal">
         <h2>Alergias</h2>
 
         <section>
@@ -86,7 +86,8 @@
                 <li><strong>Epinefrina</strong> (adrenalina): En casos de reacciones alérgicas graves, como la anafilaxia, la epinefrina es un tratamiento de emergencia que puede salvar vidas al revertir los efectos más severos de la alergia.</li>
             </ol>
         </section>
-
+		
+		<section id="tipos">
         <table>
             <caption>Tipos de alergias y sus características</caption>
             <tr>
@@ -111,6 +112,7 @@
                 <td>Interrupción del medicamento, antihistamínicos, epinefrina</td>
             </tr>
         </table>
+		</section>
 
         <section id="mapa">
             <h3>Mapa de Alergias</h3>
