--- a/articulos/bartolinitis.html
+++ b/articulos/bartolinitis.html
@@ -23,8 +23,11 @@
                 <a title="Bartolinitis">Bartolinitis</a> >
             </p>
         </nav>
+		
+		<h2>Bartolinitis</h2>
+		
         <section>
-            <h2>Tabla de Contenidos</h2>
+            <h3>Tabla de Contenidos</h3>
             <ol>
                 <li><a href="#descripcion">Descripción</a></li>
                 <li><a href="#causas">Principales Causas</a></li>
@@ -53,9 +56,9 @@
                 <li>Traumatismos o irritación: El trauma físico en el área genital o el uso de productos irritantes, como ciertos tampones o productos de higiene, pueden provocar inflamación de las glándulas de Bartolino.</li>
                 <li>Absceso: La formación de un absceso debido a la infección de la glándula de Bartolino puede causar dolor, hinchazón y malestar.</li>
             </ol>
-        </section id="sintomas">
+        </section>
         
-        <section>
+        <section id="sintomas">
             <h3>Síntomas</h3>
             <ol type="a">
                 <li>Dolor y sensibilidad: El área alrededor de la glándula de Bartolino afectada puede volverse dolorosa y sensible al tacto.</li>
