--- a/articulos/botulismo.html
+++ b/articulos/botulismo.html
@@ -24,9 +24,10 @@
             </p>
         </nav>
 
-
+		<h2>Botulismo</h2>
+		
         <section>
-            <h2>Tabla de Contenidos</h2>
+            <h3>Tabla de Contenidos</h3>
             <ol>
                 <li><a href="#descripcion">Descripción</a></li>
                 <li><a href="#causas">Principales Causas</a></li>
