--- a/articulos/respuesta_buscador.html
+++ b/articulos/respuesta_buscador.html
@@ -9,11 +9,12 @@
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
-		<img src="../imagenes/logo.jpg" alt="Logo">
-        <h1>Respuesta de Búsqueda</h1>
+        <a href="../index.html" title="Indice">
+            <img src="../imagenes/logo.jpg" alt=""/>
+            <h1>ENCICLOPEDIAMEDICA</h1>
+        </a>
     </header>
-
-  <main id="contenido-principal">
+	<main id="contenido-principal">
 		<nav>
             <p>
                 <a href="../index.html" title="indice">Indice</a> >
@@ -21,6 +22,7 @@
                 <a>Respuesta Buscador</a>
             </p>
         </nav>
+		<h2>Respuesta de Búsqueda</h2>
 		<p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
     </main>
 
