--- a/articulos/respuesta_contacto.html
+++ b/articulos/respuesta_contacto.html
@@ -9,11 +9,13 @@
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
-		<img src="../imagenes/logo.jpg" alt="Logo">
-        <h1>Respuesta de Contacto</h1>
+        <a href="../index.html" title="Indice">
+            <img src="../imagenes/logo.jpg" alt=""/>
+            <h1>ENCICLOPEDIAMEDICA</h1>
+        </a>
     </header>
 
-  <main id="contenido-principal">
+	<main id="contenido-principal">
         <nav>
             <p>
                 <a href="../index.html" title="indice">Indice</a> >
@@ -21,6 +23,7 @@
                 <a>Respuesta Contacto</a>
             </p>
         </nav>
+		<h2>Respuesta de Contacto</h2>
 		<p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta.</p>
     </main>
 
