--- a/articulos/respuesta_formulario.html
+++ b/articulos/respuesta_formulario.html
@@ -9,11 +9,13 @@
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
-		<img src="../imagenes/logo.jpg" alt="Logo">
-        <h1>Respuesta de Formulario de Articulo</h1>
+        <a href="../index.html" title="Indice">
+            <img src="../imagenes/logo.jpg" alt=""/>
+            <h1>ENCICLOPEDIAMEDICA</h1>
+        </a>
     </header>
 
-  <main id="contenido-principal">
+	<main id="contenido-principal">
 		<nav>
 			<p>
 				<a href="../index.html" title="indice">Indice</a> >
@@ -21,6 +23,7 @@
 				<a>Respuesta Formulario</a>
 			</p>
 		</nav>
+		<h2>Respuesta Formulario:</h2>
         <p>Hemos recibido la petición de guardar el articulo</p>
     </main>
 
