--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
-        <img src="imagenes/logo.jpg" style="width: 100%; max-width: 300px; height: auto;" alt="">
+        <img src="imagenes/logo.jpg" alt="">
         <h1>ENCICLOPEDIAMEDICA</h1>
     </header>
 
@@ -28,39 +28,38 @@
             <a href="indices/buscador.html" title="Buscador">Buscador</a> |
             <a href="indices/contacto.html" title="Contato">Contacto</a>
         </nav>
-
-        <section>
-            <h2>ÍNDICE</h2>
-            <ul>
-                <li><a href="indices/A.html" title="A">A</a></li>
-				<li><a href="indices/B.html" title="B">B</a></li>
-				<li><a href="indices/error.html" title="C">C</a></li>
-				<li><a href="indices/error.html" title="D">D</a></li>
-				<li><a href="indices/error.html" title="E">E</a></li>
-				<li><a href="indices/error.html" title="F">F</a></li>
-				<li><a href="indices/error.html" title="G">G</a></li>
-				<li><a href="indices/error.html" title="H">H</a></li>
-				<li><a href="indices/error.html" title="I">I</a></li>
-				<li><a href="indices/error.html" title="J">J</a></li>
-				<li><a href="indices/error.html" title="K">K</a></li>
-				<li><a href="indices/error.html" title="L">L</a></li>
-				<li><a href="indices/error.html" title="M">M</a></li>
-				<li><a href="indices/error.html" title="N">N</a></li>
-				<li><a href="indices/error.html" title="O">O</a></li>
-				<li><a href="indices/error.html" title="P">P</a></li>
-				<li><a href="indices/error.html" title="Q">Q</a></li>
-				<li><a href="indices/error.html" title="R">R</a></li>
-				<li><a href="indices/error.html" title="S">S</a></li>
-				<li><a href="indices/error.html" title="T">T</a></li>
-				<li><a href="indices/error.html" title="U">U</a></li>
-				<li><a href="indices/error.html" title="V">V</a></li>
-				<li><a href="indices/error.html" title="W">W</a></li>
-				<li><a href="indices/error.html" title="X">X</a></li>
-				<li><a href="indices/error.html" title="Y">Y</a></li>
-				<li><a href="indices/error.html" title="Z">Z</a></li>
-            </ul>
-        </section>
-
+		<section>
+			<h2>ÍNDICE</h2>
+			<ul class="indice-horizontal">
+				<li><a class="indice-boton" href="indices/A.html" title="A">A</a></li>
+				<li><a class="indice-boton" href="indices/B.html" title="B">B</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="C">C</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="D">D</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="E">E</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="F">F</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="G">G</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="H">H</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="I">I</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="J">J</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="K">K</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="L">L</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="M">M</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="N">N</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="O">O</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="P">P</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Q">Q</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="R">R</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="S">S</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="T">T</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="U">U</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="V">V</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="W">W</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="X">X</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Y">Y</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Z">Z</a></li>
+			</ul>
+		</section>
+        
         <section>
             <h2>TEMAS DESTACADOS</h2>
             <article>
@@ -78,13 +77,10 @@
 
     <aside>
         <nav>
-            <a href="articulos/ansiedad.html" title="Artículo sobre la ansiedad">Artículo completo</a>
-            <h4>¿Te gustaría publicar tu artículo?</h4>
-            <a href="indices/formulario.html" title="Añade tu artículo">Añade tu artículo</a>
-			<p> Mapa <p>
-            <a href="indices/mapa.html" title="Mapa">Mapa</a> 
-			<p> Información adicional <p>
-            <a href="indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a> 
+            <p><a href="articulos/ansiedad.html" title="Artículo sobre la ansiedad">Artículo completo</a></p>
+            <p><a href="indices/formulario.html" title="Añade tu artículo">Añade tu artículo</a></p>
+            <p><a href="indices/mapa.html" title="Mapa">Mapa</a></p>
+            <p><a href="indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
             
 		</nav>
     </aside>
