--- a/indices/accesibilidad.html
+++ b/indices/accesibilidad.html
@@ -9,20 +9,20 @@
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
-        <figure>
-            <img src="../imagenes/logo.jpg" style="width: 100%; max-width: 300px; height: auto;" alt="">
-        </figure>
-        <h2>Declaración de Accesibilidad para <span class="basic-information website-name">EnciclopediaJaviAlvaro</span></h2>
+        <a href="../index.html" title="Pantalla inicio">
+            <img src="../imagenes/logo.jpg" alt="Logo de ENCICLOPEDIAMEDICA">
+            <h1>ENCICLOPEDIAMEDICA</h1>
+        </a>
     </header>
     
-    <nav>
-        <p>
-            <a href="../index.html" title="Indice">Indice</a> >
-            <a>Accesibilidad</a> 
-        </p>
-    </nav>
-    
-    <main id="contenido-principal">
+	<main id="contenido-principal">
+		<nav>
+			<p>
+				<a href="../index.html" title="Indice">Indice</a> >
+				<a>Accesibilidad</a> 
+			</p>
+		</nav>
+		<h2>Declaración de Accesibilidad para <span class="basic-information website-name">EnciclopediaJaviAlvaro</span></h2>
         <p>
             Esta es una declaración de accesibilidad de <span class="basic-information organization-name">EnciclopediaJaviAlvaro</span>.
         </p>
