--- a/indices/buscador.html
+++ b/indices/buscador.html
@@ -9,16 +9,21 @@
 </head>
 <body>
     <a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
+    <header>
+        <a href="../index.html" title="Indice">
+            <img src="../imagenes/logo.jpg" alt=""/>
+            <h1>ENCICLOPEDIAMEDICA</h1>
+        </a>
+    </header>
+
     <main id="contenido-principal">
-		
-        <img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
                 <a title="Buscador">Buscador</a> >
             </p>
         </nav>
-        <h2>Buscar Artículos</h2>
+		<h2>Buscar Artículos</h2>
         <form action="../articulos/respuesta_buscador.html" method="GET">
 			
             <p><i class="fas fa-info-circle"></i> Describe brevemente la alergia y cómo afecta al cuerpo.</p>
