--- a/indices/contacto.html
+++ b/indices/contacto.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
-    <main id="contenido-principal">
-    
-        <img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
-       
+    <header>
+        <a href="../index.html" title="Indice">
+            <img src="../imagenes/logo.jpg" alt=""/>
+            <h1>ENCICLOPEDIAMEDICA</h1>
+        </a>
+    </header>
+	<main>
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
                 <a title="Contacto">Contacto</a> >
             </p>
         </nav>
-        <h2>Contáctanos</h2>
+		<h2>Contáctanos:</h2>
         <p>Los campos que llevan '*' son obligatorios</p>
         <form action="../articulos/respuesta_contacto.html" method="GET">
             <p><i class="fas fa-info-circle"></i> Motivo del contacto</p>
