--- a/articulos/ansiedad.html
+++ b/articulos/ansiedad.html
@@ -27,7 +27,7 @@
         <h2>Ansiedad</h2>
       
         <section>
-            <h2>Tabla de Contenidos</h2>
+            <h3>Tabla de Contenidos</h3>
             <ol>
                 <li><a href="#descripcion">Descripción</a></li>
                 <li><a href="#causas">Principales Causas</a></li>
@@ -80,7 +80,7 @@
             </ol>
         </section>
         
-        <aside>
+        <aside id="video">
             <h3>Ciclo de la ansiedad</h3>
             <img src="../imagenes/Ciclo-de-la-ansiedad.jpg" alt="Ciclo de ansiedad" usemap="#MapaAnsiedad" width="500">
             <map name="MapaAnsiedad">
@@ -91,6 +91,7 @@
                 <area shape="poly" coords="180,250,10,250,30,180,180,180" href="https://es.wikipedia.org/wiki/Preocupaci%C3%B3n" alt="Preocupación">
                 <area shape="poly" coords="350,320,150,320,150,270,350,270" href="https://es.wikipedia.org/wiki/Estr%C3%A9s" alt="Alivio a corto plazo">
             </map>
+		
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UxUybYT_WZo" 
                 title="Video del Dr. Víctor Navarro sobre la ansiedad. En este video, el Dr. Navarro explora los síntomas, causas y tratamientos para la ansiedad, proporcionando una visión comprensible y accesible sobre el tema." 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
