--- a/indices/formulario.html
+++ b/indices/formulario.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
+	<header>
+        <a href="../index.html" title="Indice">
+            <img src="../imagenes/logo.jpg" alt=""/>
+            <h1>ENCICLOPEDIAMEDICA</h1>
+        </a>
+    </header>
     <main id="contenido-principal">
-        <img src="../imagenes/logo.jpg" alt="Logo" style="width: 100%; max-width: 300px; height: auto;">
-        
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
